Fix spacing on header

--- a/index.css
+++ b/index.css
@@ -56,8 +56,7 @@ h3 {
 /* Diner Heading */
 header {
     color: white;
-    height: 8.5rem;
-    padding: 2em;
+    padding: 3em;
     background-image: url(./images/burger-pic.jpg);
     background-repeat: no-repeat;
     background-position: center right;
@@ -65,6 +64,8 @@ header {
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 /* Menu Items */
